# CG-SearchRaceSim

./: .gitignore  README.md  core.py  game.py  pyproject.toml  simulation.py  strategy.py  test_all.py  view.py  visualize.py
archive/: submission.py
src/: core.py  game.py  simulation.py  strategy.py
tests/: 01  02  07  08  09  10  11  12  13  14  15  16  17  18  19  README.md  hold_the_line  longest  round_and_round  test_1.txt  test_format.md  tokyo_drift
