[project]
name = "search-race"
version = "0.1.0"
description = ""
authors = [
    {name = "Natachat Teecharcharn",email = "nteechar@Natachats-MacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
